crates/fixtures/tests/snapshots/hostile__content_table_spans_whole_table.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 102400,
    "height": 61440,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 0,
          "ty": 0
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "The whole table",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 9733,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 6185,
                "y": 9733,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 12339,
                "y": 9733,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 17561,
                "y": 9733,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 50,
                "x": 19947,
                "y": 9733,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 35,
                "x": 27566,
                "y": 9733,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 42,
                "x": 33720,
                "y": 9733,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 39,
                "x": 39239,
                "y": 9733,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 32,
                "x": 42291,
                "y": 9733,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 1,
                "x": 47513,
                "y": 9733,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 47,
                "x": 49899,
                "y": 9733,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 28,
                "x": 53227,
                "y": 9733,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 29,
                "x": 58439,
                "y": 9733,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 39,
                "x": 64245,
                "y": 9733,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 32,
                "x": 67297,
                "y": 9733,
                "text": {
                  "start": 14,
                  "end": 15
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "zero",
            "glyphs": [
              {
                "id": 53,
                "x": 0,
                "y": 30213,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 4669,
                "y": 30213,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 45,
                "x": 9891,
                "y": 30213,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 14120,
                "y": 30213,
                "text": {
                  "start": 3,
                  "end": 4
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "wide",
            "glyphs": [
              {
                "id": 50,
                "x": 34134,
                "y": 30213,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 36,
                "x": 41957,
                "y": 30213,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 31,
                "x": 45009,
                "y": 30213,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 32,
                "x": 50815,
                "y": 30213,
                "text": {
                  "start": 3,
                  "end": 4
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
